--- a/Angular/EMC/src/app/app.component.html
+++ b/Angular/EMC/src/app/app.component.html
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-        <h1>Employee Management System</h1>
+        <h1 style="text-align: center;">Employee Management System</h1>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
@@ -23,13 +23,12 @@
                                 </div>
                                 <div *ngIf="empId.touched">
                                   <div *ngIf="empId.errors?.['required']">
-                                    <font color="red"><b>Invaild Id required</b></font>
+                                    <font color="blue">Employee Id Required</font>
                                   </div>
                                   <div *ngIf="empId.errors?.['pattern']">
-                                    <font color="red"><b>Invaild Employee  Id</b></font>
+                                    <font color="blue">Invalid Employee Id</font>
                                   </div>
                                 </div>
-
                                 <div class="form-group">
                                     <label for="Employee Name">
                                         Employee Name
@@ -39,20 +38,17 @@
                                            name="empName"
                                            #empName="ngModel" ngModel
                                            required
-                                           pattern="[a-zA-Z]+"
+                                           pattern="[a-z]+"
                                             />
                                 </div>
-
                                 <div *ngIf="empName.touched">
                                   <div *ngIf="empName.errors?.['required']">
-                                    <font color="red"><b>Invaild name required</b></font>
+                                    <font color="blue">Employee Name Required</font>
                                   </div>
                                   <div *ngIf="empName.errors?.['pattern']">
-                                    <font color="red"><b>Invaild Employee Name</b></font>
+                                    <font color="blue">Invalid Employee Name</font>
                                   </div>
                                 </div>
-
-
                                 <div class="form-group">
                                     <label for="Employee Salary">
                                         Employee Salary
@@ -65,38 +61,45 @@
                                            pattern="[0-9]+"
                                            />
                                 </div>
-
                                 <div *ngIf="empSalary.touched">
                                   <div *ngIf="empSalary.errors?.['required']">
-                                    <font color="red"><b>Invaild salary required</b></font>
+                                    <font color="blue">Employee Salary Required</font>
                                   </div>
                                   <div *ngIf="empSalary.errors?.['pattern']">
-                                    <font color="red"><b>Invaild Employee salary</b></font>
+                                    <font color="blue">Invalid Employee Salary</font>
                                   </div>
                                 </div>
-
-                                <button class="btn btn-success" (click)="insertEmpolyee(myForm.value)">
+                                <button class="btn btn-success" (click)="insertemployee(myForm.value)">
                                     Insert
                                 </button>
                             &nbsp;&nbsp;
-                                <button class="btn btn-primary"  >
+                                <button class="btn btn-primary" (click)="updateemployee(myForm.value)"  >
                                     Update
                                 </button>&nbsp;&nbsp;
-                                <button class="btn btn-danger" >
+                                <button class="btn btn-danger" (click)="deleteemployee(myForm.value)"  >
                                     Delete
                                 </button>&nbsp;&nbsp;
-                                <button class="btn btn-warning" >
+                                <button class="btn btn-warning" (click)="findemployee(myForm.value)"  >
                                     Find
                                 </button>
                                 &nbsp;&nbsp;
-                                <button class="btn btn-info" >
-                                    Find All
+                                <button class="btn btn-info" (click)="findAllemployee()">
+                                    FindAll
                                 </button>
                             </form>
 
                         </div>
                     </div>
                 </div>
-
+         <br>
+         <h3>{{ result }}</h3>
+         <div style="width: 100%;" *ngIf="flag">
+          <table width="80%" align="center" class="table table-borderd">
+           <tr><th>Employee Id</th><th>Employee Name</th><th>Employee Salary</th></tr>
+            <tr *ngFor="let emp of employeeArr">
+                <td> {{emp.id}} </td><td> {{emp.empName}} </td><td> {{emp.empSalary}} </td>
+            </tr>
+         </table>
+         </div>
     </body>
 </html>
