--- a/Angular/SARAN/src/app/app.component.css
+++ b/Angular/SARAN/src/app/app.component.css
@@ -1,83 +1,49 @@
-/* th{
-    background-color: rgb(227, 215, 43);
-    color: white;
-    font-weight: bold;
-}
-a{
-    text-decoration: none;
-    color:black;
-} */
-
-.div-body{
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 .box{
-  display: flex;
-  justify-content: center;
-  position:relative;
-}
-.header{
-  font-family: 'Times New Roman', Times, serif;
   border: 2px solid black;
-  color: green;
-  border-radius: 10px;
-  padding: 10px;
-  width: 70%;
+  font-family: "Audiowide", sans-serif;
   text-align: center;
-  margin: 20px;
-  display: inline;
-}
-
-.body-box{
-  display: flex;
-  justify-content: center
-
+  margin-top:50px;
+  padding: 10px;
+  margin-left:20%;
+  margin-right: 20%;
+  border-radius: 5px;
+  position: sticky;
 }
 .box-1{
   border: 2px solid black;
-  width: 600px;
+  border-radius: 5px;
   height: 400px;
-  text-align: center;
-  border-radius: 20px;
-  margin-top:20px;
-}
-input{
-  width: 350px;
-  height: 25px;
+  width: 890px;
+  margin-left: 300px;
   margin-top: 30px;
-  padding: 5px;
-  margin: 20px;
-  cursor: pointer;
-  display: inline;
 }
-button{
-  width: 100px;
-  height:30px;
-  margin-top:60px;
-  cursor: pointer;
+.user{
+  margin-left: 80px;
+  margin-top: 20px;
+}
+.name{
+  margin-left: 80px;
+  margin-top: 20px;
+}
+.total{
+  margin-left: 80px;
+  margin-top: 20px;
 }
 .but{
   display: flex;
+  margin-top: 30px;
+  justify-content: space-evenly;
+}
+.footer{
+  border: 2px solid black;
+  width: 900px;
+  height: 500px;
+  margin-left: 300px;
+  margin-top: 30px;
+  border-radius: 5px;
+  color: black;
+}
+.mark-box{
+  display: flex;
   justify-content: space-around;
-}
-.ADD:hover{
-  background-color:rgb(42, 170, 80);
-}
-.UPDATE:hover{
-  background-color: yellow;
-}
-.DELETE:hover{
-  background-color: red;
-}
-
-.box-2{
-      border: 2px solid black;
-      color: green;
-      width: 300px;
-      height: 400px;
-      text-align: center;
-      border-radius: 20px;
-      margin-top:20px;
-      margin-left: 30px;
 }
