--- a/Angular/SARAN/src/app/app.component.html
+++ b/Angular/SARAN/src/app/app.component.html
@@ -1,85 +1,107 @@
-<!-- <table width="80%" align="center">
-  <tr>
-    <th> <a routerLink="/home">home</a></th>
-    <th><a routerLink="/contact">contact</a></th>
-    <th><a routerLink="/about">about</a></th>
-  </tr>
-</table><br>
-<div>
-  this is my site page
-  <router-outlet></router-outlet>
-</div> -->
+<html>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
 
-<!--
-<h1>
-  Addtion:{{sum}}
-</h1>
-<app-child></app-child> -->
-
-<body class="div-body">
-
+  </head>
+  <body>
     <div class="box">
-<div class="header"><h1>Mark Management System</h1></div>
+      <h1>MARK MANGENMENT SYSTEM</h1>
     </div>
+      <div class="box-1">
+        <form #myForm="ngForm">
 
-    <div class="body-box">
-<div class="box-1">
-  <label for="if" ></label>
-    <input type="text" id="if" placeholder="Enter your id" class="form-control"  name="id" #id="ngModel"  ngModel required pattern="[0-9]+"/>ID
+        <div class="user">
+        <label for="user" class="form-label">REG.NO</label>
+    <input type="text"class="form-control" id="user" name="stdid" #stdid="ngModel" ngModel required pattern="[0-9]+" style="width: 700px; height: 45px;" placeholder="Enter your register number">
+  </div>
 
-    <div *ngIf="id.touched">
-      <div *ngIf="id.errors?.['required']">
-        <font color="red"><b>Enter your Id</b></font>
-      </div>
-      <div *ngIf="id.errors?.['pattern']">
-        <font color="red"><b>Invaild Id</b></font>
-      </div>
+  <div *ngIf="stdid.touched" style="margin-left: 82px;">
+    <div *ngIf="stdid.errors?.['required']">
+      <font color="red">Student Id Required</font>
     </div>
-
-    <br>
-    <br>
-
-    <input type="text" id="name" placeholder="Enter your name" name="data" class="form-control" #name="ngModel" ngModel required pattern="[a-zA-Z]+">NAME
-
-    <div *ngIf="name.touched">
-      <div *ngIf="name.errors?.['required']">
-        <font color="red"><b>Enter your  name</b></font>
-      </div>
-      <div *ngIf="name.errors?.['pattern']">
-        <font color="red"><b>Invalid name</b></font>
-      </div>
+    <div *ngIf="stdid.errors?.['pattern']">
+      <font color="red">Invalid Student Id</font>
     </div>
+  </div>
 
-    <br>
-    <br>
 
-    <input type="text" id="salary" placeholder="Enter your mark" class="form-control" id="mark" #mark="ngModel" ngModel required pattern="[0-9]+">MARK
-
-    <div *ngIf="mark.touched">
-      <div *ngIf="mark.errors?.['required']">
-        <font color="red"><b>Enter your mark</b></font>
-      </div>
-      <div *ngIf="mark.errors?.['pattern']">
-        <font color="red"><b>Invalid mark</b></font>
-      </div>
-    </div>
-
-    <br>
-    <div class="but">
-    <button class="ADD">ADD</button>
-    <button class="UPDATE">UPADATE</button>
-    <button class="DELETE">DELETE</button>
-    </div>
+  <div class="name">
+    <label for="name" class="form-label">NAME</label>
+<input type="text" class="form-control" id="name" name="stduser" #stduser="ngModel" ngModel required pattern="[a-z]+"  style="width: 700px; height: 45px;" placeholder="Enter your your name">
+</div>
+<div *ngIf="stduser.touched" style="margin-left: 82px;">
+  <div *ngIf="stduser.errors?.['required']">
+    <font color="red">Student Name Required</font>
+  </div>
+  <div *ngIf="stduser.errors?.['pattern']">
+    <font color="red">Invalid Student Name</font>
+  </div>
 </div>
 
-<div class="box-2">
-    <h2>Mark List</h2>
-    <hr style="height: 2px; color: black;">
-    <h3></h3>
-    <h3></h3>
-
+<nav class="mark-box">
+<div class="mark-1">
+  <label for="user" class="form-label" >MARK 1</label>
+<input type="text"class="form-control" id="user" name="stdid" #stdid="ngModel" ngModel required pattern="[0-9]+" style="width: 100px; height: 45px;" placeholder="Enter your register number">
 </div>
 
+<div class="mark-2">
+  <label for="user" class="form-label">MARK 2</label>
+<input type="text"class="form-control" id="user" name="stdid" #stdid="ngModel" ngModel required pattern="[0-9]+" style="width: 100px; height: 45px;" placeholder="Enter your register number">
 </div>
-<br>
-</body>
+
+<div class="mark-3">
+  <label for="user" class="form-label">MARK 3</label>
+<input type="text"class="form-control" id="user" name="stdid" #stdid="ngModel" ngModel required pattern="[0-9]+" style="width: 100px; height: 45px;" placeholder="Enter your register number">
+</div>
+
+<div class="mark-4">
+  <label for="user" class="form-label">MARK 4</label>
+<input type="text"class="form-control" id="user" name="stdid" #stdid="ngModel" ngModel required pattern="[0-9]+" style="width: 100px; height: 45px;" placeholder="Enter your register number">
+</div>
+
+<div class="mark-5">
+  <label for="user" class="form-label">MARK 5</label>
+<input type="text"class="form-control" id="user" name="stdid" #stdid="ngModel" ngModel required pattern="[0-9]+" style="width: 100px; height: 45px;" placeholder="Enter your register number">
+</div>
+</nav>
+
+
+
+<div class="total">
+  <label for="mark" class="form-label">MARK</label>
+<input type="text" class="form-control" id="mark" name="stdmark" #stdmark="ngModel" ngModel required pattern="[0-9]+"  style="width: 700px; height: 45px;" placeholder="Enter your Mark">
+</div>
+<div *ngIf="stdmark.touched" style="margin-left: 82px;">
+  <div *ngIf="stdmark.errors?.['required']">
+    <font color="red">Student Mark Required</font>
+  </div>
+  <div *ngIf="stdmark.errors?.['pattern']">
+    <font color="red">Invalid Student Mark</font>
+  </div>
+</div>
+
+
+<div class="but">
+  <button  class="btn btn-primary " (click)="insertstudent(myForm.value)">insert</button>&nbsp;&nbsp;
+  <button class="btn btn-warning " (click)="updatestudent(myForm.value)">update</button>&nbsp;&nbsp;
+  <button  class="btn btn-danger" (click)="deletestudent(myForm.value)">delete</button>&nbsp;&nbsp;
+  <button  class="btn btn-success" (click)="findstudent(myForm.value)">find</button>&nbsp;&nbsp;
+  <button  class="btn btn-info"  (click)="findAllstudent()">FindAll</button>
+</div>
+</form>
+     </div>
+
+     <div class="footer">
+     <br>
+     <h3>{{result}}</h3>
+     <div style="width: 100%;" *ngIf="flag">
+      <table width="80%" align="center" class="table table-borderd" style="color: black;">
+       <tr><th>Student Id</th><th>Student Name</th><th>Student Mark</th></tr>
+        <tr *ngFor="let std of studentArr">
+            <td> {{std.id}} </td><td> {{std.stdName}} </td><td> {{std.stdmark}} </td>
+        </tr>
+     </table>
+     </div>
+    </div>
+  </body>
+</html>
